Style changes and fixes
Expanded search items will display in full (they were previously being cut off).

Added the 500 weight italic font of DM sans, which was missing.

Added styling for the items on the 'Search history' page.

--- a/LATROBE/css/custom1.css
+++ b/LATROBE/css/custom1.css
@@ -495,7 +495,7 @@ prm-newspapers-search-bar > .layout-row > .layout-column {
 }
 
 .list-item-wrapper h3, #brief h3, prm-facet h3, .spotlight-element h3,
-prm-no-search-result h3 {
+prm-no-search-result h3, prm-saved-queries-list md-list-item h3 {
   font-family: dm sans;
 }
 
@@ -510,16 +510,20 @@ prm-search-result-tool-bar .md-toolbar-tools {
 prm-search-result-tool-bar .floated-max-results-message {
   background: #ffdeab;
 }
-.list-item-wrapper {
+.list-item-wrapper,
+prm-saved-queries-list md-list-item {
   background-color: var(--ltu-white);
   border: none;
   margin: 0 4px 4px;
   border-radius: 5px;
   box-shadow: 1px 1px 2px #ccc !important;
-  overflow: hidden;
 }
-.list-item-wrapper:hover, .list-item-wrapper:focus {
+.list-item-wrapper:hover, .list-item-wrapper:focus,
+prm-saved-queries-list md-list-item:hover, prm-saved-queries-list md-list-item:focus {
   box-shadow: 0px 0px 1px 1px var(--ltu-red) !important;
+}
+.list-item-wrapper:hover .list-item-primary-content::before {
+  border-radius: 5px;
 }
 .__xs prm-brief-result-container .result-item-text {
   padding: 0 15px;
@@ -595,10 +599,10 @@ prm-full-view.flex #full-view-container {
   margin: 0 auto;
   position: relative;
 }
-prm-full-view.flex .full-view-inner-container {
+prm-full-view #full-view-container, prm-full-view .full-view-inner-container {
   background: #fff;
 }
-prm-full-view.flex prm-view-online .all-links-options {
+prm-full-view prm-view-online .all-links-options {
   background: #eee;
 }
 /* --- end full display for a single item */
